# ticket-recognition

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGTest.cmake  FindLeptonica.cmake  FindOpenCV.cmake  FindTesseract.cmake
docs/: Anforderungsspezifikation_CTI.docx  CTI_public_interface.drawio  CTI_structure.drawio  Datenmodell.drawio  Doxyfile.in  JavaCti.drawio  Logo.xml  Projektplan.url  Systemumfeld.drawio  Systemumfeld_fachlich.drawio  Technische Dokumentation CTI.docx  UseCase.drawio  Voucher-Vorlage erstellen.csv  Vouchererkennung.csv  context.drawio  doxygen.cmake  ideas.txt  presentation.pptx  ticket-recognition.drawio
libs/googletest-distribution/lib/: gtest_maind.lib
libs/googletest-distribution/linux/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
libs/leptonica/cmake/: LeptonicaConfig.cmake  LeptonicaTargets-release.cmake
libs/leptonica/lib/pkgconfig/: lept.pc
libs/leptonica/linux/cmake/: LeptonicaConfig.cmake  LeptonicaTargets-noconfig.cmake  LeptonicaTargets.cmake
libs/leptonica/linux/lib/pkgconfig/: lept.pc
libs/leptonica/windows/cmake/: LeptonicaConfig.cmake  LeptonicaTargets-release.cmake  LeptonicaTargets.cmake
libs/leptonica/windows/include/leptonica/: leptwin.h
libs/leptonica/windows/lib/: leptonica-1.74.4.lib
libs/lpng/lib/: libpng16d.lib
libs/lpng/lib/libpng/: libpng16.cmake
libs/lpng/linux/lib/: libpng16.so.16
libs/lpng/linux/lib/libpng/: libpng16-noconfig.cmake  libpng16.cmake
libs/lpng/linux/lib/pkgconfig/: libpng16.pc
libs/lpng/windows/lib/: libpng16.lib  libpng16_static.lib  libpng16_staticd.lib
libs/opencv/: setup_vars_opencv4.cmd
libs/opencv/linux/lib/: libopencv_img_hash.so.4.0  libopencv_img_hash.so.4.0.1  libopencv_world.so.4.0
libs/opencv/windows/: OpenCVConfig.cmake
libs/opencv/x64/vc15/lib/: opencv_img_hash401.lib  opencv_img_hash401d.lib  (+2 more)
libs/tesseract/cmake/: TesseractConfig.cmake
libs/tesseract/linux/cmake/: TesseractConfig-version.cmake  TesseractConfig.cmake  TesseractTargets-noconfig.cmake
libs/tesseract/windows/cmake/: TesseractConfig.cmake  TesseractTargets-release.cmake  TesseractTargets.cmake
libs/tesseract/windows/lib/: tesseract40.lib
libs/tiff/lib/pkgconfig/: libtiff-4.pc
libs/tiff/linux/include/: tiffconf.h
libs/tiff/linux/lib/: libtiff.so.5  libtiff.so.5.3.0
libs/tiff/windows/lib/: tiff.lib  tiffd.lib
libs/zlib/lib/: zlib.lib  zlibd.lib
libs/zlib/linux/lib/: libz.so.1
libs/zlib/share/pkgconfig/: zlib.pc
libs/zlib/windows/lib/: zlibstatic.lib  zlibstaticd.lib
linux-build/: Dockerfile  build_config.sh  docker-compose.yml  install.sh
linux-test/: Dockerfile  docker-compose.yml  execute_test.sh
src/: CMakeLists.txt
src/cti/: CMakeLists.txt  bounding_box.cpp  cti.cpp  matcher.cpp  metadata.cpp  metadata_reader.cpp  point.cpp  text.cpp  ticket.cpp  ticket_image.cpp  ticket_match.cpp
src/cti/exception/: CMakeLists.txt  cti_exception.cpp
src/cti/extraction/: CMakeLists.txt  extraction_algorithm_impl.cpp  extraction_algorithm_impl.hpp  extraction_algorithms.cpp  extraction_options.cpp
src/cti/matching/: CMakeLists.txt  matching_algorithm_impl.cpp  matching_algorithm_impl.hpp  matching_algorithms.cpp  matching_options.cpp
src/cti/ocr/: CMakeLists.txt  ocr_algorithms.cpp  tesseract_ocr_algorithm.cpp  tesseract_ocr_algorithm.hpp
src/cti/sift/: CMakeLists.txt  sift_extraction_algorithm.cpp  sift_matching_algorithm.cpp  sift_matching_algorithm.hpp
src/cti/timer/: CMakeLists.txt  timer.cpp  timer.hpp
src/include/: CMakeLists.txt  bounding_box.hpp  cti.hpp  dllmacro.h  matcher.hpp  metadata.hpp  metadata_reader.hpp  point.hpp  text.hpp  ticket.cpp  ticket.hpp  ticket_image.hpp  ticket_match.hpp  ticket_metadata.hpp
src/include/algorithm/: CMakeLists.txt  extraction_algorithm.hpp  matching_algorithm.hpp
src/include/exception/: cti_exception.hpp
src/include/extraction/: CMakeLists.txt  extraction_algorithm.hpp  extraction_algorithms.hpp  extraction_options.hpp
src/include/matching/: CMakeLists.txt  matching_algorithm.hpp  matching_algorithms.hpp  matching_options.hpp
src/include/ocr/: CMakeLists.txt  ocr_algorithm.hpp  ocr_algorithms.hpp
src/include/sift/: CMakeLists.txt  sift_extraction_algorithm.hpp  sift_matching_algorithm.hpp
src/main/: CMakeLists.txt  main.cpp
src/some/: CMakeLists.txt  someClass.cpp  someClass.hpp
src/ticket/: CMakeLists.txt
test/: CMakeLists.txt
test/cti/: CMakeLists.txt  boundingbox_test.cpp  cti_exception_test.cpp  extraction_algorithm_test.cpp  matching_algorithm_test.cpp  sift_performance_test.cpp  test_util.cpp  test_util.hpp  ticket_image_test.cpp  ticket_test.cpp
test/cti/matching/: CMakeLists.txt  description_matcher_mock.hpp  feature2d_mock.hpp  matching_algorithm_impl_test.cpp
test/io/: CMakeLists.txt  file_util.cpp  file_util.hpp
test/reader/: CMakeLists.txt  confusion_matrix.cpp  confusion_matrix.hpp  reader.cpp  reader.hpp  test_case.cpp  test_case.hpp
test/resources/input_data/: test_input1.txt  test_input2.txt
test/resources/reader/: test_input1.txt  test_output1.txt
test/resources/templates/: adventurerooms.txt  babymarkt.txt  boulderisland.txt  equiart.txt  erichlutz.txt  generic.txt  geschenkgutschein.txt  k.txt  kneippgarten.txt  massage.txt  pfefferhaus.txt  rrrevolve.txt  schwimmschule.txt  walliserstuba.txt  weihnachten.txt  weinbox.txt  yoga.txt
test/resources/test_cases/: test_case_1.txt  test_case_2.txt
test/resources/tickets/: adventurerooms_1.txt  adventurerooms_2.txt  babymarkt_1.txt  babymarkt_2.txt  boulderisland_1.txt  boulderisland_2.txt  equiart_1.txt  equiart_2.txt  erichlutz_1.txt  erichlutz_2.txt  generic_1.txt  generic_2.txt  geschenkgutschein_1.txt  geschenkgutschein_2.txt  k_1.txt  k_2.txt  kneippgarten_1.txt  kneippgarten_2.txt  massage_1.txt  massage_2.txt  pfefferhaus_1.txt  pfefferhaus_2.txt  rrrevolve_1.txt  rrrevolve_2.txt  schwimmschule_1.txt  schwimmschule_2.txt  walliserstuba_1.txt  walliserstuba_2.txt  weihnachten_1.txt  weihnachten_2.txt  weinbox_1.txt  weinbox_2.txt  yoga_1.txt  yoga_2.txt
test/sub/: CMakeLists.txt  test.cpp
(+10 files in other folders)
